# wpr_rack_pkg

./: CMakeLists.txt  LICENSE  package.xml
include/: BoxColorDetect.h  BoxDim.h  BoxObject.h  BoxTrack.h  MobileRack.h  PalletRack.h  RackDetect.h  StorageRack.h
launch/: box_clr_rack.launch  color_calibration.launch  grab_test.launch  place_test.launch  rack_detect.launch  template_build.launch  wpb_home_calibration.launch  wpb_home_rack.launch  wpb_home_sim.launch  wpr1_box_capture.launch  wpr1_box_test.launch  wpr1_box_track.launch  wpr1_calibration.launch  wpr1_storage_rack.launch
msg/: BoxParam.msg  ObjectBox.msg
rviz/: box_capture.rviz  box_color.rviz  rd.rviz  wpb_home.rviz  wpb_mani.rviz  wpr1.rviz
src/: box_capture_node.cpp  box_capture_save.cpp  box_color_node.cpp  box_dim_node.cpp  box_track_node.cpp  color_calibration_node.cpp  color_grab_node.cpp  icp_test_node.cpp  rack_calibration_node.cpp  rack_detect_node.cpp  template_build_node.cpp  wpb_home_rack_node.cpp  wpr1_box_node.cpp  wpr1_storage_rack.cpp
src/rack_detect/: BoxColorDetect.cpp  BoxDim.cpp  BoxObject.cpp  BoxTrack.cpp  MobileRack.cpp  PalletRack.cpp  RackDetect.cpp  StorageRack.cpp
